--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "promisifier",
   "description": "A simple callback that turns every Async function into promise.",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "ClickHere <js@clickhere.co.il>",
   "dependencies": {
-    "when": "latest"
+    "when": "2.7.x"
   },
   "devDependencies": {
-    "mocha": "latest"
+    "mocha": "1.16.x"
   },
   "keywords": [
     "promise",
